# slack-proxy

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README-GAME-CLIENTS.md  README-SERVER-PATCH.md  README.md  urt-proxy.conf.example
.github/workflows/: release.yml
gui/: urt-mgmt.py
gui/urt-mgmt/: Cargo.toml
gui/urt-mgmt/src/: app.rs  config.rs  main.rs  net.rs  protocol.rs  proxy_entry.rs  worker.rs
gui/urt-mgmt/src/ui/: connection.rs  log.rs  mod.rs  servers.rs  sidebar.rs
include/: config.h  hashmap.h  log.h  mgmt.h  q3proto.h  relay.h
patches/: ioq3-realip.patch
src/: config.c  hashmap.c  log.c  main.c  mgmt.c  q3proto.c  relay.c
