[package]
name = "urt-mgmt"
version = "0.1.0"
edition = "2021"
description = "GUI management client for urt-proxy"

[dependencies]
eframe = { version = "0.31", default-features = true }
egui_extras = { version = "0.31", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
